2006-08-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* classProviderGz.c: 
	Fixed 1519600: Removed invalid test. (By Adrian Schuur)

	* support.h, providerDrv.c, providerMgr.c, msgqueue.c: 
	Fixed 1548673: Reworked handling of MSG_SEG_CHAR segments. Now the
	necessary padding will occur only when needed, i.e. when copied
	to a request buffer.

	* objectImpl.c:
	Fixed 1548673: Fixed string and array buffer expansion logic.
	Also removes a memory leak.

2006-07-31  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* support.c, httpAdapter.c, providerDrv.c: 
	Fixed 1529096: Useless provider execution timings, by bringing in line
	with release 1.1.1 functionality.

2006-07-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
	* control.c, sfcbBroker.c, trace.c, trace.h: 
	Fixed 1529021: Added trace options to config file.

2006-07-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
	* cimXmlParser.c: 
	Fixed 1528304: segfault on reference parameters.

	* README, configure.ac, getSchema.sh.pre.in: 
	Fixed 1528455: added support for local CIM schema files.

2006-07-25 Sven Schuetz

	* cimslp.c:
	Fixed potential potential memory problem

2006-07-19  Sven Schuetz

	* args.c, array.c, brokerEnc.c, brokerUpc.c, cimXmlGen.c, cimXmlRequest.c, cimcClientSfcbLocal.c, constClass.c, context.c, control.c, datetime.c, enumeration.c, instance.c, internalProvider.c, interopProvider.c, native.h, objectImpl.c, objectpath.c, predicate.c, queryOperation.c, result.c, selectexp.c, sqlStatement.c, string.c, support.c, value.c:
	Fixed 1525280: fixed segfault when linking with sfcc code by renaming function calls
	* cimslp.c, cimslpCMPI.c, cimslpSLP.c:
	Fixed 1296278: added slp support
	* configure.ac, acinclude.m4, Makefile.am
	Modified build process to include SLP stuff

2006-07-18  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
